Revision history for Perl module XML::RSS

1.22 - 
       - Fix the tests to work on Win32 (RT#23752, Shlomi, Kenichi Ishigaki)
       - make add_module work for both RSS 1.0 and 2.0 (RT#16191,
         RT#18907, RT#13209, Ben Trott, Ivan Willis)
       - Channel->{link | textInput} (sic) property mapping in RSS 2.0
         (RT#9862, Shlomi / chatiman)
       - Don't fail the tests if Test::Pod::Coverage is missing
         (reported by Andreas J. Koenig)

1.21 - December 5th, 2006
       - Support inserting a XSL stylesheet URL into the XML output
         (RT#11569, Jason A. Smith, Shlomi Fish)
       - Remove empty lines in the test_manifest - some versions of
         Test::Manifest doesn't do the right thing with
         those. (RT#23678, Hugo van der Sanden)
       - Add Pod::Coverage tests
       - More Date Conversion (Shlomi) 
       - Fix for a Markup Injection Vulnerability (RT#23435, Shlomi)

1.20 - November 10th, 2006
       - Value for $XML::RSS::modules gets destroyed (RT#18755, Shlomi)
         - Note that YOU CAN NO LONGER USE $XML::RSS::modules, you
           have to use the add_modules call as documented!
       - encode generates warnings for undefined text (RT#13523, Mark Stosberg)
       - Missing last build date value in RSS 2.0 (RT#19417)
       - renamed the internal encode method to _encode
       - RSS 2.0 spec allows omission of title from entry (RT#18817,
         test from Shlomi)
       - Can't create "0" values in optional items (RT#11415, based on
         patch from Shlomi - thanks!)
       - Remove the executable bit from Makefile.PL
       - Add test to test regression of CPAN RT#5438 (Shlomi)
       - More tests...

1.12 - October 25, 2006
       - Add more tests
       - make sure META.yml is correctly generated
       - Fix enclosure parsing (RT#7920, Tatsuhiko Miyagawa)
       - Incorrect entity encoding in XML output (RT#22467, reported by Stephen Hall)

1.11 - October 19, 2006