@@ -36,6 +36,7 @@ t/0.91-parse.t
 t/1.0-generate.t
 t/1.0-parse-exotic.t
 t/1.0-parse.t
+t/1.0-parse-2.t
 t/1.0-to-2.0.t
 t/2.0-generate.t
 t/2.0-modules.t
